--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.17.2",
     "knex": "^2.5.1",
@@ -38,6 +39,7 @@
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/react": "^14.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
