--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^17.2.2",
     "express": "^4.17.2",
     "knex": "^2.5.1",
+    "react-router-hash-link": "^2.4.3",
     "sqlite3": "^5.1.6",
     "superagent": "^10.2.1"
   },
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-hash-link": "^2.4.9",
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
