--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.17.2",
+    "http-status-codes": "^2.3.0",
     "knex": "^2.5.1",
     "react-router-hash-link": "^2.4.3",
     "sqlite3": "^5.1.6",
