--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.2",
     "http-status-codes": "^2.3.0",
     "knex": "^2.5.1",
+    "nock": "^14.0.10",
     "pg": "^8.16.3",
     "react-router-hash-link": "^2.4.3",
     "sqlite3": "^5.1.6",
