--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "pg": "^8.16.3",
     "react-router-hash-link": "^2.4.3",
     "sqlite3": "^5.1.6",
-    "superagent": "^10.2.1"
+    "superagent": "^10.2.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
@@ -52,6 +53,7 @@
     "@types/react-router-hash-link": "^2.4.9",
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.2.1",
     "esbuild": "^0.18.19",
     "eslint": "^8.56.0",
